Moved all pagination to ng.

--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -57,6 +57,6 @@
   </tbody>
 </table>
 
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator_ng.html.twig" %}
 
 {% endblock %}
