--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -26,7 +26,7 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block body %}
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator_ng.html.twig" %}
 
 <div id="user_search" style="float: right;">
   <fieldset>
@@ -83,6 +83,6 @@ $(document).ready(function() {
 </div>
 </form>
 
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator_ng.html.twig" %}
 
 {% endblock %}
