--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -56,5 +56,5 @@
   </tbody>
 </table>
 
-{% include "ClubPaginatorBundle:Paginator:paginator_ng.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
 {% endblock %}
