--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -41,3 +41,19 @@
     {% endif %}
 {% endspaceless %}
 {% endblock form_errors %}
+
+{% block tinymce_widget %}
+{% spaceless %}
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/tinymce/jscripts/tiny_mce/tiny_mce.js') }}"></script>
+    <script type="text/javascript">
+    tinyMCE.init({
+        mode : "textareas",
+        theme : "simple",
+        width: "80%",
+        height: "300px"
+    });
+    </script>
+
+    {{ form_widget(form) }}
+{% endspaceless %}
+{% endblock %}
