Added JQuery form types.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.23.custom.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/clublayout/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/modernizr.custom.27457.js') }}"></script>
     <script type="text/javascript">
     $(document).ready(function(){
       $('#login_username').click(function() {
