Added jquery birthday type.

--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -85,3 +85,17 @@
     {{ form_widget(form) }}
 {% endspaceless %}
 {% endblock %}
+
+{% block jquery_birthday_widget %}
+{% spaceless %}
+    <script>
+    $(function() {
+        if (!Modernizr.inputtypes.date) {
+            $( "#{{ id }}" ).datepicker();
+        }
+    });
+    </script>
+
+    {{ form_widget(form) }}
+{% endspaceless %}
+{% endblock %}
