Added a bit of the jquery autocompleter.

--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -99,3 +99,14 @@
     {{ form_widget(form) }}
 {% endspaceless %}
 {% endblock %}
+
+{% block jquery_autocomplete_widget %}
+{% spaceless %}
+    {% include "ClubLayoutBundle:Default:ajax_user.html.twig" %}
+
+    <script>
+    </script>
+
+    {{ form_widget(form) }}
+{% endspaceless %}
+{% endblock %}
