--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -9,8 +9,8 @@
 {% block pagenav %}
 <div class="navbar">
   <div class="navbar-inner">
-    <form method="post" action="{{ path('club_user_member_index') }}" class="navbar-search pull-right">
-      {{ form_widget(form.user, {'v':'name', 'attr': {'class':'search-query','placeholder':'Search'|trans}}) }}
+    <form method="post" action="{{ path('club_user_member_search') }}" class="navbar-search pull-right">
+      {{ form_widget(form.user, {'attr': {'class':'search-query','placeholder':'Search'|trans}}) }}
       {{ form_rest(form) }}
     </form>
   </div>
