--- a/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
+++ b/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
@@ -5,19 +5,18 @@
     <tr>
       <th>{% trans %}Read{% endtrans %}</th>
       <th>{% trans %}User{% endtrans %}</th>
-      <th>{% trans %}Severity{% endtrans %}</th>
       <th>{% trans %}Message{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="5">&#160;</td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for log in logs %}
-    <tr>
+    <tr class="{% if log.severity == 'informational' %}success{% else %}warning{% endif %}">
       <td>
         {% if not log.new %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/email_open.png') }}" title="{% trans %}Read{% endtrans %}" alt="{% trans %}Read{% endtrans %}" />
         {% else %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/email.png') }}" title="{% trans %}Unread{% endtrans %}" alt="{% trans %}Unread{% endtrans %}" />
@@ -30,18 +29,12 @@
         {% trans %}System{% endtrans %}
       {% endif %}
       </td>
-      <td>
-        {% if log.severity == 'debug' %}<span class="label label-02">{{ log.severity }}</span>
-        {% elseif log.severity == 'informational' %}<span class="label label-02">{{ log.severity }}</span>
-        {% elseif log.severity == 'warning' %}<span class="label label-04">{{ log.severity }}</span>
-        {% else %}<span class="label label-01">{{ log.severity }}</span>{% endif %}
-      </td>
       <td>{{ log.log }}</td>
       <td>{{ log.createdAt|club_datetime }}</td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">{% trans %}There are no logs.{% endtrans %}</td>
+    <td colspan="4">{% trans %}There are no logs.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
