--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
@@ -1,41 +1,26 @@
 <fieldset>
-  <legend>Period subscription</legend>
+  <legend>{% trans %}Period subscription{% endtrans %}</legend>
 
   {{ form_row(form.time_interval) }}
-  <span class="smaller low">{% trans %}Info: What is the time interval for this subscription?{% endtrans %}</span><br />
-  <span class="smaller low">{% trans %}Info: 1 month is <b>1M</b>{% endtrans %}</span><br />
-  <span class="smaller low">{% trans %}Info: 1 month and 15 days is <b>1M15D</b>{% endtrans %}</span><br />
-  <span class="smaller low">{% trans %}Info: 5 hours is <b>T5H</b>{% endtrans %}</span><br />
-  <span class="smaller low">{% trans %}Info: 1 year, 5 hours and 15 minutes is <b>Y1T5H15M</b>{% endtrans %}</span>
 </fieldset>
 
 <fieldset>
-  <legend>Time range subscription</legend>
+  <legend>{% trans %}Time range subscription{% endtrans %}</legend>
 
   {{ form_row(form.start_date) }}
-  <span class="smaller low">{% trans %}Info: What will be the first day of this subscription?{% endtrans %}</span>
   {{ form_row(form.expire_date) }}
-  <span class="smaller low">{% trans %}Info: When will subscription expire?{% endtrans %}</span>
 </fieldset>
 
 <fieldset>
-  <legend>Other settings</legend>
+  <legend>{% trans %}Other settings{% endtrans %}</legend>
   {{ form_row(form.ticket) }}
-  <span class="smaller low">{% trans %}Info: How many tickets will the user get for this subscription?{% endtrans %}</span>
   {{ form_row(form.auto_renewal) }}
-  <span class="smaller low">{% trans %}Info: Will this subscription automatically be renewal?{% endtrans %}</span>
   {{ form_row(form.allowed_pauses) }}
-  <span class="smaller low">{% trans %}Info: How many pauses is the user of this subscription allowed to take?{% endtrans %}</span>
   {{ form_row(form.booking) }}
-  <span class="smaller low">{% trans %}Info: Is allowed to use bookings?{% endtrans %}</span>
   {{ form_row(form.team) }}
-  <span class="smaller low">{% trans %}Info: Is allowed to use teams?{% endtrans %}</span>
   {{ form_row(form.start_time) }}
-  <span class="smaller low">{% trans %}Info: From what time on day will user be active?{% endtrans %}</span>
   {{ form_row(form.stop_time) }}
-  <span class="smaller low">{% trans %}Info: What time on day will membership not be active anymore?{% endtrans %}</span>
   {{ form_row(form.location) }}
-  <span class="smaller low">{% trans %}Info: Which locations will the user be a member of?{% endtrans %}</span>
 
   {{ form_rest(form) }}
 </fieldset>
