--- a/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_event_event_edit', {'id':event.id})} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_event_event_edit', {'id':event.id}), 'novalidate':true} %}
 {% endblock %}
