--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -4,56 +4,51 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}">{% trans %}Create event{% endtrans %}</a></li>
-            <li><a href="{{ path('club_event_event_ical') }}">{% trans %}iCal format{% endtrans %}</a></li>
+            <li><a href="{{ path('club_event_adminevent_new') }}">{% trans %}Create level{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
 {% endblock %}
 
 {% block body %}
-    <div class="nav-top box">
-        {% include "ClubEventBundle:AdminEvent:_navigation.html.twig" %}
-    </div> <!-- /nav-top -->
-      <!-- Calendar -->
-      <table id="calendar-02" class="width100 style">
-        {% for event in events %}
-        <tr>
-          <th style="width:100px;">{{ event.startDate|date('l') }}<br />{{ event.startDate|date('Y/n/j') }}</th>
-          <td class="note-01">
-            <ul class="nostyle">
-              <li>
-                <strong>{{ event.eventName }}</strong><br />
-                {% trans with {'%date%':event.startDate|club_datetime} %}Start date: %date%{% endtrans %}<br />
-                {% trans with {'%date%':event.stopDate|club_datetime} %}Stop date: %date%{% endtrans %}<br />
-                {% if event.maxAttends == 0 %}
-                {% trans with {'%attends%':event.attends|length} %}Attends: %attends% / No limit{% endtrans %}<br />
-                {% else %}
-                {% trans with {'%attends%':event.attends|length,'%limit%':event.maxAttends} %}Attends: %attends% / %limit%{% endtrans %}<br />
-                {% endif %}
-
-                {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_event_event_edit', { 'id':event.id })} %} {% trans %}Edit{% endtrans %}&#160;
-                {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_event_event_delete', { 'id':event.id })} %} {% trans %}Delete{% endtrans %}&#160;
-                {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('admin_event_attend', {'id':event.id})} %} {% trans %}Attends{% endtrans %}&#160;
-              </li>
-            </ul>
-          </td>
-        </tr>
+<table class="table">
+  <thead>
+    <tr>
+      <th>{% trans %}Name{% endtrans %}</th>
+      <th>{% trans %}Attends{% endtrans %}</th>
+      <th>{% trans %}Created at{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr class="bg">
+      <td colspan="4">&#160;</td>
+    </tr>
+  </tfoot>
+  <tbody>
+  {% for event in events %}
+    <tr>
+      <td>{{ event.eventName }}</td>
+      <td>
+        {% if event.maxAttends == 0 %}
+          {% trans with {'%attends%':event.attends|length} %}Attends: %attends% / No limit{% endtrans %}<br />
         {% else %}
-        <tr>
-          <th>&#160;</th>
-          <td>
-            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="ico">{% trans %}Create{% endtrans %}</a></p>
-          </td>
-        </tr>
-
-        {% endfor %}
-      </table>
-
-      <!-- Month -->
-
-      <div class="nav-bottom box">
-        {% include "ClubEventBundle:AdminEvent:_navigation.html.twig" %}
-      </div> <!-- /nav-top -->
+          {% trans with {'%attends%':event.attends|length,'%limit%':event.maxAttends} %}Attends: %attends% / %limit%{% endtrans %}<br />
+        {% endif %}
+      </td>
+      <td>{{ event.createdAt|club_datetime }}</td>
+      <td>
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_event_event_edit', { 'id':event.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_event_event_delete', { 'id':event.id })} %}
+        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('admin_event_attend', { 'id':event.id })} %}
+      </td>
+    </tr>
+  {% else %}
+  <tr>
+    <td colspan="4">{% trans %}There are no events.{% endtrans %}</td>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
 
 {% endblock %}
