--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -1,5 +1,5 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_event_adminevent_new')}  %}
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_event_adminevent_new'), 'novalidate':true}  %}
 {% endblock %}
