--- a/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
@@ -1,23 +1,28 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block header %}
+<div class="page-header">
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Checkout{% endtrans %}</h1>
+</div>
+{% endblock %}
+
 {% block body %}
-<h2>{% trans %}Checkout{% endtrans %}</h2>
+<div class="span5">
 
-<div class="col50">
-    <form method="post" action="{{ path('login_check') }}" class="form-horizontal">
-    <legend>{% trans %}Existing member{% endtrans %}</legend>
-    <p>{% trans %}If you already have an account, please signin here.{% endtrans %}</p>
+    <form method="post" action="{{ path('login_check') }}">
+        <legend>{% trans %}Existing member{% endtrans %}</legend>
+        <p>{% trans %}If you already have an account, please signin here.{% endtrans %}</p>
 
-    <p><label class="req" for="_username">{% trans %}Username{% endtrans %}</label><br /><input size="40" type="text" id="_username" name="_username" required="required" class="input-text" /></p>
-    <p><label class="req" for="_password">{% trans %}Password{% endtrans %}</label><br /><input size="40" type="password" id="_password" name="_password" required="required" class="input-text" /></p>
+        <p><label class="req" for="_username">{% trans %}Username{% endtrans %}</label><br /><input size="40" type="text" id="_username" name="_username" required="required" class="input-text" /></p>
+        <p><label class="req" for="_password">{% trans %}Password{% endtrans %}</label><br /><input size="40" type="password" id="_password" name="_password" required="required" class="input-text" /></p>
 
-    {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Login'|trans} %}
-
+        {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Login'|trans} %}
     </form>
+
 </div>
 
-<div class="col50 f-right">
-    <form method="POST" action="{{ path('club_shop_checkout_signin') }}" class="form-horizontal">
+<div class="span6">
+    <form method="POST" action="{{ path('club_shop_checkout_signin') }}">
     <legend>{% trans %}New member{% endtrans %}</legend>
     <p>{% trans %}If you do not have an account, please enter you details here.{% endtrans %}</p>
 
@@ -46,7 +51,7 @@
     <legend>{% trans %}Phone Information{% endtrans %}</legend>
     <p>{{ form_row(form.profile.profile_phone.phone_number) }}</p>
 
-    {{ form_row(form._token) }}
+    {{ form_rest(form) }}
 
     {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Create account'|trans} %}
     </form>
