--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -19,9 +19,19 @@
 
              <ul class="nav">
                 {% for item in menu %}
-                <li>
-                <a href="{{ item.route }}">{{ item.name }}</a>
-                </li>
+                    {% if item.items is defined %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.name }} <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ item.route }}">{{ item.name }}</a></li>
+                                {% for i in item.items %}
+                                    <li><a href="{{ i.route }}">{{ i.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li><a href="{{ item.route }}">{{ item.name }}</a></li>
+                    {% endif %}
                 {% endfor %}
             </ul>
           </div><!--/.nav-collapse -->
