Fixed jquery_datetime form field.

--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -60,7 +60,7 @@
 {% endspaceless %}
 {% endblock %}
 
-{% block jquery_date_time_widget %}
+{% block jquery_datetime_widget %}
 {% spaceless %}
     <script>
     $(function() {
