Fixed stuff according to tests.

--- a/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
@@ -1,4 +1,4 @@
 <div class="form-actions">
-  <button {% if novalidate is defined %}formnovalidate="true"{% endif %} type="submit" class="btn btn-primary">{% if button is defined %}{{ button }}{% else %}{% trans %}Save changes{% endtrans %}{% endif %}</button>
+  <button formnovalidate="true" {% if novalidate is defined %}formnovalidate="true"{% endif %} type="submit" class="btn btn-primary">{% if button is defined %}{{ button }}{% else %}{% trans %}Save changes{% endtrans %}{% endif %}</button>
 </div>
 
