Fixed bug in booking overview schema.

--- a/src/Club/BookingBundle/Resources/views/Overview/vertical.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/vertical.html.twig
@@ -10,7 +10,7 @@
       buttonImageOnly: true,
       dateFormat: "yy-mm-dd",
       onSelect: function (dateText, inst) {
-        location.href="{{ path('homepage') }}booking/"+dateText
+        location.href="{{ path('homepage') }}en/booking/overview/"+dateText
       }
     });
   });
