--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -10,7 +10,7 @@
       buttonImageOnly: true,
       dateFormat: "yy-mm-dd",
       onSelect: function (dateText, inst) {
-        location.href="{{ path('homepage') }}booking/"+dateText
+        location.href="{{ path('homepage') }}en/booking/overview/"+dateText
       }
     });
   });
@@ -21,10 +21,11 @@
     var date = Date.parse("{{ date|date('c')}}");
     var url = "{{ path('homepage') }}";
     var location = {{ location.id }};
+    var locale = "en";
     var hour_height = 80;
     var field_width = 120;
 
-    initTable(location, date, url, hour_height, field_width);
+    initTable(location, date, url, hour_height, field_width, locale);
   });
   </script>
 
