--- a/src/Club/MatchBundle/Resources/views/Match/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/index.html.twig
@@ -3,9 +3,13 @@
 {% block body %}
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<p class="box">
-  <a href="{{ path('club_match_match_new') }}" class="btn-create"><span>{% trans %}Insert match{% endtrans %}</span></a>
-</p>
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_match_match_new') }}">{% trans %}Insert match{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
 {% endif %}
 
 {% render "ClubMatchBundle:Match:Recent" with {'limit':20} %}
