--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -5,8 +5,8 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a>
-            <li><a href="{{ path('shop_subscription') }}">{% trans %}Subscriptions{% endtrans %}</a>
+            <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a></li>
+            <li><a href="{{ path('shop_subscription') }}">{% trans %}Subscriptions{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
