--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -1,20 +1,7 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block javascripts %}
-  <script src="{{ asset('bundles/clubbooking/js/booking_horizontal.js') }}" type="text/javascript"></script>
-  <script>
-  $(document).ready(function() {
-    $("#date").datepicker({
-      showOn: "button",
-      buttonImage: "{{ asset('bundles/clublayout/images/icons/16x16/calendar.png') }}",
-      buttonImageOnly: true,
-      dateFormat: "yy-mm-dd",
-      onSelect: function (dateText, inst) {
-        location.href="{{ path('homepage') }}en/booking/overview/"+dateText
-      }
-    });
-  });
-  </script>
+  {% include "ClubLayoutBundle:Default:ajax_calendar.html.twig" %}
 
   <script>
   $(document).ready(function() {
@@ -36,19 +23,20 @@
 {% endblock %}
 
 {% block body %}
-<form method="post">
+<form method="POST" action="{{ path('club_booking_overview') }}">
 <h2>{{ date|club_date('full') }} <input type="hidden" name="date" id="date" /></h2>
 </form>
 
 <p>
 {% for item in nav %}
-  <a class="btn" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
+    <a class="btn" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
 {% endfor %}
 </p>
 
-<div class="fix"></div>
-
-<p><a class="link" id="prev"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_left.png') }}" /></a> <a class="link" id="next"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_right.png') }}" /></a></p>
+<p>
+    <a class="link" id="prev"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_left.png') }}" /></a>
+    <a class="link" id="next"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_right.png') }}" /></a>
+</p>
 
 <div id="overlay">
   <div id="booking">
