Some cleanup from last commit.

--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -2,6 +2,7 @@
 
 {% block javascripts %}
   {% include "ClubLayoutBundle:Default:ajax_calendar.html.twig" %}
+  <script src="{{ asset('bundles/clubbooking/js/booking_horizontal.js') }}" type="text/javascript"></script>
 
   <script>
   $(document).ready(function() {
