--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
@@ -6,7 +6,7 @@
 
 <p>Would you like to change this event only, all events in the series or this and all following events in the series?</p>
 
-<p><a href="{{ path('club_team_adminschedule_index', {'category_id':schedule.team.id}) }}">Only this instance</a> All other events in the series will remain the same.</p>
+<p><a href="{{ path('club_team_adminschedule_index', {'category_id':schedule.teamCategory.id}) }}">Only this instance</a> All other events in the series will remain the same.</p>
 <p><a href="{{ path('club_team_adminschedule_editfuture', {'id':schedule.id}) }}">All the following</a> This and all the following events will be changed.<br />
 Any changes to future events will be lost.</p>
 <p><a href="{{ path('club_team_adminschedule_editall', {'id':schedule.id}) }}">All events in the series</a> All events in the series will be changed.<br />
