--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -33,6 +33,11 @@
     <script type="text/javascript" src="{{ asset('bundles/clublayout/js/modernizr.custom.27457.js') }}"></script>
 
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('bundles/clublayout/images/apple-touch-icon-144-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('bundles/clublayout/images/apple-touch-icon-114-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/clublayout/images/apple-touch-icon-72-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" href="{{ asset('bundles/clublayout/images/apple-touch-icon-57-precomposed.png') }}">
+
 
     {% block stylesheets %}{% endblock %}
     {% block javascripts %}{% endblock %}
